add migration to create sessions table and add uid and provider to users table

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -37,6 +37,10 @@ Style/StringLiterals:
   Exclude:
     - 'db/schema.rb'
 
+Style/Documentation:
+  Exclude:
+    - 'db/migrate/*'
+
 # Offense count: 2
 # This cop supports safe autocorrection (--autocorrect).
 # Configuration parameters: AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, AllowedPatterns, IgnoredPatterns.
