--- a/config/database.yml
+++ b/config/database.yml
@@ -20,12 +20,14 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: Rails.application.credentials.postgres.username
-  password:  Rails.application.credentials.postgres.password
+
 
 development:
   <<: *default
   database: oauth_study_development
+#  username: Rails.application.credentials.postgres.username
+#  password: Rails.application.credentials.postgres.password
+#  host: localhost
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,7 +62,9 @@ development:
 test:
   <<: *default
   database: oauth_study_test
-
+  username: Rails.application.credentials.postgres.username
+  password: Rails.application.credentials.postgres.password
+  host: localhost
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
